@@ -2,6 +2,7 @@ includedir = $(prefix)/include/nucleus/asm-ppc
 
 include_HEADERS = \
 		atomic.h \
+		calibration.h \
 		hal.h \
 		system.h \
 		syscall.h
