@@ -3202,128 +3202,6 @@ int xnpod_wait_thread_period (void)
     return err;
 }
 
-#ifdef __KERNEL__
-
-#if CONFIG_RTAI_HW_SCHED_LATENCY != 0 || !CONFIG_RTAI_HW_APERIODIC_TIMER
-
-int xnpod_calibrate_sched (void)
-
-{
-    nktimerlat = xnarch_calibrate_timer();
-
-    if (!nktimerlat)
-	return -EIO;
-
-    nkschedlat = xnarch_ns_to_tsc(CONFIG_RTAI_HW_SCHED_LATENCY);
-
-    return 0;
-}
-
-#else /* CONFIG_RTAI_HW_SCHED_LATENCY unspecified. */
-
-static void xnpod_calibration_thread (void *cookie)
-
-{
-    int *flagp = (int *)cookie, count;
-    xnticks_t expected, period;
-    long jitter = 0;
-
-    period = xnarch_ns_to_tsc(XNARCH_CALIBRATION_PERIOD);
-
-    expected = xnarch_get_cpu_tsc();
-
-    xnpod_set_thread_periodic(xnpod_current_thread(),
-			      XN_INFINITE,
-			      XNARCH_CALIBRATION_PERIOD);
-
-    for (count = 0; count < 300000000 / XNARCH_CALIBRATION_PERIOD; count++)
-        {
-        expected += period;
-        xnpod_wait_thread_period();
-	jitter += (long)(xnarch_get_cpu_tsc() - expected);
-        }
-
-    nkschedlat = jitter < 0 ? 0 : (jitter / count);
-    nkschedlat = xnarch_adjust_calibration(nkschedlat);
-
-    *flagp = 1;
-
-    xnpod_delete_self();
-}
-
-int xnpod_calibrate_sched (void)
-
-{
-    xnthread_t *thread;
-    int flag = 0, err;
-    xnpod_t *pod;
-
-    nktimerlat = xnarch_calibrate_timer();
-
-    if (!nktimerlat)
-	return -EIO;
-
-    pod = (xnpod_t *)xnarch_sysalloc(sizeof(*pod));
-
-    if (!pod)
-	return -ENOMEM;
-
-    thread = (xnthread_t *)xnarch_sysalloc(sizeof(*thread));
-
-    if (!thread)
-	{
-	err = -ENOMEM;
-	goto free_pod;
-	}
-
-    err = xnpod_init(pod,1,1,0);
-
-    if (err)
-	goto free_thread;
-
-    err = xnpod_start_timer(XN_APERIODIC_TICK,
-			    XNPOD_DEFAULT_TICKHANDLER);
-
-    if (err)
-        /* The architecture does not support aperiodic timing;
-           autocalibration is not available. */
-        goto unload_and_exit;
-
-    xnpod_init_thread(thread,
-                      "calibration",
-                      1,
-                      0,
-                      0);
-
-    xnpod_start_thread(thread,
-                       0,
-                       0,
-                       XNPOD_ALL_CPUS,
-                       &xnpod_calibration_thread,
-                       &flag);
-
-    /* Wait for the calibration thread to finish. */
-    err = xnarch_sleep_on(&flag);
-
- unload_and_exit:
-
-    xnpod_shutdown(XNPOD_NORMAL_EXIT); /* This will stop the timer too. */
-
- free_thread:
-
-    xnarch_sysfree(thread,sizeof(*thread));
-
- free_pod:
-
-    xnarch_sysfree(pod,sizeof(*pod));
-
-    return err;
-}
-
-#endif /* CONFIG_RTAI_HW_SCHED_LATENCY */
-
-#endif /* __KERNEL__ */
-
 /*@}*/
 
 EXPORT_SYMBOL(xnpod_activate_rr);
