@@ -8,7 +8,7 @@
 
 MODULE_LICENSE("GPL");
 
-#define TASK_PERIOD_NS XNARCH_CALIBRATION_PERIOD
+#define TASK_PERIOD_NS 100000	/* ns */
 
 #define SAMPLE_COUNT (1000000000 / TASK_PERIOD_NS)
 
